--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ section{
     height: 100%;
     margin: auto;
     box-sizing:border-box;
+    position: relative;
+    z-index: 1;
+
 }
 
 aside{
@@ -83,6 +86,7 @@ aside{
     margin: auto;
     box-sizing:border-box;
     background-color: #00000044;
+    z-index: -1;
 }
 
 .tabInfoContainer{
@@ -196,6 +200,7 @@ footer{
     background-color:transparent;
     text-align: center;
     padding: 0px;
+    z-index: 1;
     background-color: rgb(150, 0, 0);
 
 }
@@ -205,7 +210,7 @@ footer{
     width: 99%;
     height: 3%;
     border: 0;
-
+    z-index: 1;
     background: url('images/heart.gif');
     cursor: pointer;
 }
@@ -225,4 +230,48 @@ div.controlButton{
 #playButton {
     height: 100%;
 }
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 5; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    z-index:5;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
 
