--- a/css/style.css
+++ b/css/style.css
@@ -323,21 +323,25 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid black;
     background-color: white;
     text-align: center;
     width: 36%;
     height: 20%;
+    padding: 10px 0px;
+    padding-top: 15px;
 }
 
-#popupError > h2{
+#errorH2{
     font-size: 40px;
+    margin: 0;
 }
 
 #okButton{
+    margin: 0;
     border: 1px solid black;
-    padding: 0 10px;
+    padding: 0px 10px;
     font-size: 20px;
     font-weight: bold;
     background-color: var(--unselected_tab);
